--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -686,7 +686,6 @@
     font-weight: 700;
     border-radius: 50px;
 }
-
 #mensaje-exito{
     display:none; 
     text-align:center; 
@@ -698,7 +697,8 @@
     border-radius: 8px;
 }
 
-
+/* confirmacion por wp */
+#seccion-wp{box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4); }
 
 /* ------------------------------ seccion cbu ------------------------------ */
 .contenedor-cbu {
@@ -954,11 +954,12 @@
 /* ------------------------------ franja de color final ------------------------------ */
 footer { background: var(--color-principal-oscuro); color: var(--blanco); padding: 40px 20px; }
 .footer-content { display: flex; flex-direction: column; align-items: center; gap: 20px; }
-.footer-logo { height: 40px; filter: brightness(100); }
+.footer-brand p {font-family: 'Syne', sans-serif; font-weight: 500; font-size: 1rem;}
 .footer-social { display: flex; gap: 15px; }
-.btn-social { color: var(--blanco); border: 1px solid rgba(255,255,255,0.3); padding: 8px 15px; border-radius: 20px; display: flex; align-items: center; gap: 8px; transition: 0.3s; }
+.footer-social a {text-decoration: none; font-weight: 700;}
+.btn-social { color: var(--blanco); border: 1px solid rgba(255,255,255,0.3); padding: 8px 15px 4px 15px; border-radius: 20px; display: flex; align-items: center; gap: 8px; transition: 0.3s; }
+.btn-social i { padding-bottom: 0.35rem; }
 .btn-social:hover { background: var(--blanco); color: var(--color-principal-oscuro); }
-
 
 
 
