--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -698,7 +698,7 @@
 }
 
 /* confirmacion por wp */
-#seccion-wp{box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4); }
+#seccion-wp {box-shadow: inset 0px -20px 30px -15px rgba(0,0,0,0.6);}
 
 /* ------------------------------ seccion cbu ------------------------------ */
 .contenedor-cbu {
